<resources>
    <string name="app_name">FrgDado</string>
    <string name="resultado">"Resultado tirada: "</string>
    <string name="lanzar">Lanzar</string>
    <string name="racha">"Racha: "</string>
    <string name="nothingSelected">Debe seleccionar un número para efectuar una tirada</string>
    <string name="lanzamientos">Lanzamientos:</string>
    <string name="numero_caras">Número de caras:</string>
    <string name="num_dados">Número de dados:</string>
    <string name="start">Nueva Partida</string>
    <string name="fin_partida">Fin Partida</string>
    <string name="dificultad">"Dificultad: "</string>
    <string name="ultima_partida">Última Partida:</string>
    <string name="borrar_hist_dif">Borrar Historial Dificultad Actual</string>
</resources>