<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="@+id/etNumCaras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/etNumCaras"
        app:layout_constraintTop_toTopOf="@+id/etNumCaras"
        app:layout_constraintVertical_bias="0.333" />

    <EditText
        android:id="@+id/etNumCaras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/tvNumCaras"
        app:layout_constraintEnd_toStartOf="@+id/btnStart"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvNumCaras"
        app:layout_constraintTop_toTopOf="@+id/tvNumCaras"
        app:layout_constraintVertical_bias="0.461" />

    <EditText
        android:id="@+id/etNumDados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/tvNumDados"
        app:layout_constraintEnd_toStartOf="@+id/tvNumCaras"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvNumDados"
        app:layout_constraintTop_toTopOf="@+id/tvNumDados" />

    <TextView
        android:id="@+id/tvNumCaras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_caras"
        app:layout_constraintBottom_toBottomOf="@+id/etNumDados"
        app:layout_constraintEnd_toStartOf="@+id/etNumCaras"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/etNumDados"
        app:layout_constraintTop_toTopOf="@+id/etNumDados"
        app:layout_constraintVertical_bias="0.461" />

    <TextView
        android:id="@+id/tvNumDados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_dados"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etNumDados"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/frgDado1"
        android:name="com.resuadam2.frgdado.FrgDado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/frgDado2"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/frgDado2"
        android:name="com.resuadam2.frgdado.FrgDado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frgDado1"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/tvTiradas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lanzamientos"
        app:layout_constraintBottom_toBottomOf="@+id/btnFinPartida"
        app:layout_constraintEnd_toStartOf="@+id/btnFinPartida"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnFinPartida" />

    <Button
        android:id="@+id/btnFinPartida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvTiradas"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>